--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -162,9 +162,6 @@ body {
     background-color: #ecebebe1;
     height: 100vh;
     width: 100%;
-    /* background-image: url(/Assets/img/bali.png);
-    background-size: cover;
-    background-repeat: no-repeat; */
 }
 
 .promo h1 {
@@ -224,32 +221,6 @@ body {
     transition: all ease-in-out .3s;
 }
 
-/* .promo .card {
-    height: 400px;
-    border: none;
-    box-shadow: 0px 10px 20px ;
-}
-
-.promo .card img {
-    border-radius: 3%;
-}
-
-.promo .card:hover {
-    background: linear-gradient(172deg, rgb(14, 240, 44), #137400, #009e0d, #000);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-}
-
-.promo .card:hover .card-body h4 {
-    color: #fcfcfc;
-    transition: all ease-in-out .2s;
-}
-
-.promo .card:hover .card-body h5 {
-    color: #fcfcfc;
-    transition: all ease-in-out .2s;
-}
-
-*/
 #destination {
     width: 100%;
     height: auto;
@@ -260,10 +231,6 @@ body {
     position: relative;
     z-index: 1;
 }
-
-/* .svg-header {
-    position: absolute;
-} */
 
 .carousel-item::before{
     content: ' ';
@@ -314,29 +281,6 @@ body {
     text-align: justify;
 }
 
-/* .destination .carousel-item .content {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    display: flex;
-}
-
-.destination .content h2 {
-    font-size: 40px;
-    color: #fcfcfc;
-    margin: 0 0 10px;
- 
-}
-
-.destination .content p {
-    font-size: 40px;
-    color: #fcfcfc;
-    margin: 0 0 10px;
-
-} */
-
 .destination .carousel-item.active .card img {
     animation: fadeInLeft 0.5s ease-in;
 }
@@ -360,41 +304,6 @@ body {
     font-size: 18px;
     margin-bottom: 50px;
 }
-
-/* #destination {
-    width: 100%;
-    background-image:  linear-gradient(0deg, rgba(4, 4, 5, 0.438), rgba(0, 0, 0, 0.73)), url(/Assets/img/bunaken.jpg); 
-    background-size: cover;
-    height: 100vh;
-}
-
-.destination .card-body {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.destination .card-body p {
-    color: white;
-    font-size: 23px;
-}
-
-.destination .card img {
-    filter: brightness(0.6);
-}
-
-.destination .card img:hover {
-    filter: brightness(0.8);
-    transition: ease-in-out 0.2s;
-}
-
-.destination .card-body .underline {
-    border: 2px solid orangered;
-    width: 150px;
-    text-align: center;
-} */
 
 #galery {
     height: auto;
@@ -457,8 +366,8 @@ body {
     transition: all 0.5s;
     left: 0;
     right: 0;
-    top: 15%;
-    font-size: 15px;
+    top: 10%;
+    font-size: 12px;
 }
 
 .galery .card:hover .info .btn {
@@ -466,9 +375,6 @@ body {
 }
 
 #contack {
-    /* background-image: url(/Assets/img/th\ \(1\).jpg);
-    background-size: cover;
-    background-repeat: no-repeat; */
     height: auto;
     width: 100%;
     background-color: #ecebebe1;
@@ -549,10 +455,10 @@ body {
     }
 }
 
-@media (max-width: 864px) {
+@media (min-width: 320px) and (max-width: 765px) {
 
     .header p {
-        width: 400px;
+        width: auto
     }
 
     #promo {
@@ -577,14 +483,8 @@ body {
         justify-content: center;
         align-items: center;
         margin-bottom: 0;
-        width: 340px;
-        height: 270px;
     }
     
-    .destination .card img {
-        height: 270px;
-        width: 340px;
-    }
     
     .destination .isi {
         width: 100%;
@@ -598,13 +498,126 @@ body {
     }
 
     .contack .sponsor img {
-        width: 150px; 
-        height: 130px; 
+        width: 90px; 
+        height: 100px; 
     }
 
     .content-blog {
         flex-wrap: wrap;
         width: 100%;
     }
+
+    .galery .card:hover .info  {
+        top: 10%;
+        font-size: 12px; 
+    }
     
 }
+
+@media (min-width: 768px) and (max-width: 1030px) {
+    
+    .header {
+        font-size: 25px;
+    }
+    
+    .header p {
+        width: auto;
+    }
+
+    #promo {
+        height: auto;
+    }
+
+    .promo .card {
+        margin-bottom: 30px;
+        height: 450px;
+    }
+
+    .promo .card-body h4 {
+        font-size: 30px;
+    }
+
+    .promo .card-body p {
+        font-size: 20px;
+    }
+
+    .promo .card .card-fasilitas span {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    
+    .promo .card .card-fasilitas span img {
+        width: 50px;
+        height: 40px;
+        margin-bottom: 15px;
+    }
+
+    .promo  .card .card-fasilitas p {
+        font-size: 20px;
+    }
+
+    .carousel-item {
+        flex-wrap: wrap;
+    }
+
+    .destination .content {
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .destination .card{
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 300px;
+    }
+
+    .destination .card img{
+        width: 70%;
+        height: 500px;
+    }
+    
+    .destination .isi {
+        width: 100%;
+        margin-right: 5%;
+        margin-bottom: 50px;
+    }
+
+    .destination .isi p {
+        font-size: 25px;
+        text-align: justify;
+    }
+
+    .destination .isi h2 {
+        font-size: 40px;
+        margin-bottom: 15px;
+    }
+
+    .destination .isi .btn {
+        font-size: 25px;
+    }
+
+    .contack .sponsor img {
+        width: 90px; 
+        height: 100px; 
+    }
+
+    .content-blog {
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .galery .card {
+        height: 400px;
+    }
+
+    .galery .card:hover .info{
+        top: 20%;
+        font-size: 25px;
+        font-weight: 500;
+    }
+
+    .galery .card:hover .info .btn {
+        font-size: 25px;
+    }
+} 
