--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -31,7 +31,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(0deg,rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url(/Assets/img/Gunung-Bromo-Jawa-Timur.jpg); 
+    background-image: linear-gradient(0deg,rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url(./Assets/img/Gunung-Bromo-Jawa-Timur.jpg); 
     background-size: cover; 
     background-position: center;
     justify-content: center;
